syntax = "proto3";

package api.service;

option go_package = "github.com/olezhek28/link-shortener/pkg";

service LinkShortenerV1{
  rpc GetShortLink(GetShortLinkRequest) returns (GetShortLinkResponse);
  rpc GetLongLink(GetLongLinkRequest) returns (GetLongLinkResponse);
}

message GetShortLinkRequest {
  string long_link = 1;
}

message GetShortLinkResponse {
  message Result {
    string short_link = 1;
  }

  Result result = 1;
}

message GetLongLinkRequest {
  string short_link = 1;
}

message GetLongLinkResponse {
  message Result {
    string long_link = 1;
  }

  Result result = 1;
}